--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -8,8 +8,20 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.9.3",
+    "@emotion/styled": "^11.9.3",
+    "@mui/icons-material": "^5.8.4",
+    "@mui/material": "^5.8.4",
+    "axios": "^0.27.2",
+    "chart.js": "^3.8.0",
     "react": "^18.0.0",
-    "react-dom": "^18.0.0"
+    "react-chartjs-2": "^4.2.0",
+    "react-cookie": "^4.1.1",
+    "react-dom": "^18.0.0",
+    "react-redux": "^8.0.2",
+    "react-router-dom": "^6.3.0",
+    "redux": "^4.2.0",
+    "redux-thunk": "^2.4.1"
   },
   "devDependencies": {
     "@types/react": "^18.0.0",
